# mat_stat.10points

./: pyproject.toml
src/: covid.ipynb  data.csv  main.ipynb
